--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,7 +1,7 @@
 
 <nav>
   <span id="homelink">
-    <a href="/">linh</a>
+    <a href="{{config.base_url}}/">linh</a>
   </span>
   <span id="navlinks">
     <a href="/work/">work</a>
