--- a/templates/nav.html
+++ b/templates/nav.html
@@ -4,8 +4,8 @@
     <a href="{{config.base_url}}/">linh</a>
   </span>
   <span id="navlinks">
-    <a href="/work/">work</a>
-    <a href="/art/">fun</a>
-    <a href="/about/">about me</a>
+    <a href="{{config.base_url}}/work/">work</a>
+    <a href="{{config.base_url}}/fun/">fun</a>
+    <a href="{{config.base_url}}/about/">about me</a>
   </span>
 </nav>
